--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,16 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito&display=swap");
 * {
   margin: 0;
   padding: 0;
   border: none;
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+}
+
+h1 {
+  text-align: center;
+  font-size: 10rem;
 }
 /*# sourceMappingURL=index.css.map */
