--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,11 +7,17 @@
   border: none;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   font-family: 'Raleway', sans-serif;
 }
 
-h1 {
+h4 {
   text-align: center;
-  font-size: 10rem;
+  font-size: 4rem;
 }
